--- a/KeyBind Website/forhonor.html
+++ b/KeyBind Website/forhonor.html
@@ -38,7 +38,9 @@
 							<ul>
 								<li class="active"><a href="index.html">Homepage</a></li>
 								<li><a href="forum.html">Forum</a></li>
+								<li><a href = "news.html">News</a></li>
 								<li><a href="contact.html">Contact</a></li>
+								
 							</ul>
 						</nav>
 					</div>
