--- a/KeyBind Website/fortnite.html
+++ b/KeyBind Website/fortnite.html
@@ -38,12 +38,20 @@
 							<ul>
 								<li class="active"><a href="index.html">Homepage</a></li>
 								<li><a href="forum.html">Forum</a></li>
+								<li><a href = "news.html">News</a></li>
 								<li><a href="contact.html">Contact</a></li>
+								
 							</ul>
 						</nav>
 					</div>
 				<!-- Header -->
-
+				<div id='cssmenu'>
+							<ul>
+								<li><a href="#ninja" class="button medium"><span>Ninja</span></a></li>
+            					<li><a href="#tfue" class="button medium"><span>Tfue</span></a></li>
+           			 			<li><a href="#savage" class="button medium"><span>MrSavageM</span></a></li>
+							</ul>
+					</div>
 				<!-- Page -->
 					<div id="page" class="container">
 						
@@ -52,12 +60,8 @@
 								<h2>Fortnite</h2>
 								<span class="byline">Keybindings and settings</span>
 							</header>
-<div id="banner" class="container">
-						<section>
-							<a href="#ninja" class="button medium">Ninja</a>
-							<a href="#tfue" class="button medium">Tfue</a>
-							<a href="#savage" class="button medium">MrSavageM</a>
-						</section>
+						<div id="banner" class="container">
+
 					</div>
 					<!-- Ninja -->		
 							<div id="ninja" class="table-title"><h3>Player: Ninja</h3></div>
